fix close button text overlap at mobile size

--- a/aemedge/blocks/modal/modal.css
+++ b/aemedge/blocks/modal/modal.css
@@ -32,7 +32,7 @@ body.modal-open {
     .modal dialog .modal-content .table-container .default-content-wrapper{
     position: sticky;
     top: 0;
-    padding-top:26px;
+    padding-top:42px;
     height: 150px;
     text-align: center;
     background: canvas;
@@ -59,6 +59,7 @@ body.modal-open {
     .modal dialog .modal-content .table-container .default-content-wrapper{
       position: sticky;
       top: 0;
+      padding-top: 26px;
       background: canvas;
     }
   } 
